# digest-agent

./: .dockerignore  .env.example  .gitignore  AGENTS.md  AIA_SUBMISSION.md  CLOUD_SHELL_WORKSHOP.md  Dockerfile  E2E_REPORT.md  INTEGRATION_REPORT.md  Makefile  OVERNIGHT_REPORT.md  README.md  WORKSHOP_GUIDE.md  package.json  publish_latest_3.py  pyproject.toml
.claude/: settings.json
.claude/hooks/: guard_rails.sh
.gemini/: settings.json
.gemini/hooks/: app-protection.js
.gemini/skills/sys-doctor/: SKILL.md
.github/workflows/: deploy.yml
agents/: __init__.py
agents/stock/: __init__.py  agent.py  industry_agent.py  market_agent.py  news_agent.py
agents/stock/tools/: __init__.py  industry_tools.py  market_tools.py  (+1 more)
apps/web/: next.config.ts  package.json  tsconfig.json
config/: settings.yaml
leapcore_iface/: __init__.py  agent.py  memory.py  orchestrator.py  pipeline.py  tool.py
scripts/: deny-env-edit.sh  sys-load.sh
src/: app.py  orchestrator.py
src/fetcher/: __init__.py  rss_fetcher.py
src/llm/: __init__.py  gemini_summarizer.py  prompt_manager.py
src/models/: database.py
src/pages/: 1_articles.py  2_publish.py  3_tasks.py  4_stock_analysis.py
src/processor/: __init__.py  processor.py
src/publishers/: __init__.py  base_publisher.py  discord_publisher.py  email_publisher.py  line_publisher.py  multi_channel_publisher.py  telegram_publisher.py
tests/: conftest.py  test_articles_api.py  test_digest_api.py  test_gemini_summarizer.py  test_health.py  test_integration_pipeline.py  test_publisher_integration.py  test_publishers.py
(+18 files in other folders)
